2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from filesystem directory iterators.

	* include/grub/fs.h (grub_fs_dir_hook_t): New type.
	(struct grub_fs.dir): Add hook_data argument.

	Update all implementations and callers.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Multi-boot manual config): Fix typo for
	"recommended".

2013-01-20  Leif Lindholm  <leif.lindholm@arm.com>

	* util/grub-mkimage.c (main): Postpone freeing arguments.output
	until after its use in generate_image.

2013-01-20  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/loader/i386/linux.c (grub_cmd_initrd): Don't add the
	initrd size to addr_min, since the initrd will be allocated after
	this address.

2013-01-20  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.common: Fix autogen rules to pass definition
	files on stdin; Makefile.util.am needs Makefile.utilgcry.def

2013-01-20  Leif Lindholm  <leif.lindholm@arm.com>

	* include/grub/elf.h: Update ARM definitions based on binutils.

2013-01-20  Aleš Nesrsta  <starous@volny.cz>

	Split long USB transfers into short ones.

2013-01-20  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Simple configuration): Clarify GRUB_HIDDEN_TIMEOUT
	is interrupted by ESC.

2013-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-script-check.c (main): Uniform the error message.

2013-01-20  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from ELF iterators.

2013-01-20  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from device iterators.

	* include/grub/arc/arc.h (grub_arc_iterate_devs_hook_t): New type.
	(grub_arc_iterate_devs): Add hook_data argument.
	* include/grub/ata.h (grub_ata_dev_iterate_hook_t): New type.
	(struct grub_ata_dev.iterate): Add hook_data argument.
	* include/grub/device.h (grub_device_iterate_hook_t): New type.
	(grub_device_iterate): Add hook_data argument.
	* include/grub/disk.h (grub_disk_dev_iterate_hook_t): New type.