@@ -1,5 +1,11 @@
 2013-01-21  Colin Watson  <cjwatson@ubuntu.com>
 
+	* grub-core/partmap/msdos.c (embed_signatures): Add the signature of
+	an Acer registration utility with several sightings in the wild.
+	Reported by: Rickard Westman.  Fixes Ubuntu bug #987022.
+
+2013-01-21  Colin Watson  <cjwatson@ubuntu.com>
+
 	Remove nested functions from filesystem directory iterators.
 
 	* include/grub/fs.h (grub_fs_dir_hook_t): New type.
